loopwhile.BaggleSeeker.scala.error
Erreur de compilation :
BaggleSeeker:1: error: value update is not a member of Boolean
while (estSurBiscuit()=false) {
       ^